# powermesh

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: mesh.yaml  node.yaml
docs/screenshots/: powermesh-live-results.html  powermesh-report.html
scripts/: install-agent.ps1  install-agent.sh  install-collector.ps1  install-collector.sh  live_test.py
src/: agent.py  aggregator.py  api.py  collector.py  config.py  dashboard.py  db.py  doctor.py  lite.py  logging_utils.py  paths.py  platform_detect.py  sensors.py
tests/: test_aggregator.py  test_api.py  test_collector_bind_safety.py  test_collector_cors_and_gating.py  test_config.py  test_db.py  test_sensors.py
