[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powermesh"
version = "0.1.0"
description = "Distributed power consumption monitoring across Tailscale mesh"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["psutil>=5.9", "requests>=2.31", "pyyaml>=6.0"]
keywords = ["power", "monitoring", "homelab", "tailscale", "sqlite"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
smartplug = ["python-kasa>=0.6"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
powermesh-agent = "src.agent:main"
powermesh-collector = "src.collector:main"
powermesh-lite = "src.lite:main"
powermesh-doctor = "src.doctor:main"
